--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="site-identity" content="44d537f5-3c5f-4018-b926-65efb70ced6f-md" />
     <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
+    <title>TNG E-MAS NOTEBOOK</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
 
     <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="YJ's Gold Notebook" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="TNG E-MAS NOTEBOOK" />
+    <meta property="og:description" content="TNG E-MAS NOTEBOOK Project" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
