--- a/index.html
+++ b/index.html
@@ -2,22 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/jpeg" href="/44d537f5-3c5f-4018-b926-65efb70ced6f-md.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="site-identity" content="44d537f5-3c5f-4018-b926-65efb70ced6f-md" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>TNG E-MAS NOTEBOOK</title>
+    <meta name="description" content="Gold Trading Journal - Track your gold transactions privately in your browser" />
+    <meta name="author" content="Gold Notebook" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="YJ's Gold Notebook" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="TNG E-MAS NOTEBOOK" />
+    <meta property="og:description" content="Gold Trading Journal - Track your gold transactions privately in your browser" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://yongjun05.github.io/gold-ledger/44d537f5-3c5f-4018-b926-65efb70ced6f-md.jpeg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@GoldNotebook" />
+    <meta name="twitter:image" content="https://yongjun05.github.io/gold-ledger/44d537f5-3c5f-4018-b926-65efb70ced6f-md.jpeg" />
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
